border-image-* returns the initial keyword instead of the initial value when setting border-image shorthand https://bugs.webkit.org/show_bug.cgi?id=244657 rdar://problem/99420050

Reviewed by NOBODY (OOPS!).

* Source/WebCore/css/parser/CSSPropertyParser.cpp:
(WebCore::CSSPropertyParser::consumeBorderImage):
(WebCore::CSSPropertyParser::consumeContainerShorthand):
(WebCore::CSSPropertyParser::consumeListStyleShorthand):
(WebCore::CSSPropertyParser::parseShorthand):